src/objects/Municipality__c.object
<CustomObject>
    <description>Represents a Town, City, Township, Borough or other entity in a County</description>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Municipalities</relationshipLabel>
        <relationshipName>Municipalities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <externalId>true</externalId>
        <label>FIPS Code</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_ID__c</fullName>
        <formula>County__r.State__r.Id</formula>
        <label>State ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <formula>County__r.State__r.Name</formula>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <label>Municipality</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Municipality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Municipalities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>